# milk

./: .gitignore  Anchor.toml  README.md  devnet-config.json  package.json  tsconfig.json
app/: next.config.ts  package.json
app/public/circuits/: transfer.wasm  transfer_vk.json  unshield_vk.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/dapp/: page.tsx
app/src/components/: CircuitBackground.tsx  ShieldPanel.tsx  TransferPanel.tsx  UnshieldPanel.tsx  WalletProvider.tsx
app/src/lib/: constants.ts  crypto.ts  idl.json  useProgram.ts
app/src/types/: modules.d.ts
circuits/: export_vk_pair.js  export_vk_rust.js  generate_test_input.js  generate_test_inputs.js  package.json  transfer.circom  unshield.circom
circuits/lib/: merkle.circom
indexer/: .gitignore  Dockerfile  nixpacks.toml  package.json
indexer/src/: index.js  parser.js  sync.js  tree.js
programs/milk/: Cargo.toml
programs/milk/src/: error.rs  groth16.rs  lib.rs  poseidon_tree.rs  state.rs  vk.rs
scripts/: init-devnet.ts  migrate-devnet-v2.ts
tests/: milk.ts
