[package]
name = "milk"
version = "0.1.0"
description = "MILK - Private SOL transfers on Solana using ZK proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "milk"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "spl-account-compression/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
spl-account-compression = { version = "1.0.0", features = ["cpi"] }
solana-program = "2.3.0"
bytemuck = { version = "1.14", features = ["derive"] }
light-poseidon = "0.4.0"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
solana-poseidon = "2.3"

[target.'cfg(target_os = "solana")'.dependencies]
solana-define-syscall = "2.2.1"
